--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    text-align: center;
     display: flex;
     align-items: center;
     padding-top: 40px;
@@ -46,4 +47,8 @@ p{
     color: lightslategray;
     font-size: small;
     margin: 0;
+}
+
+.error-messange{
+    color: red;
 }
