--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    text-align: center;
     display: flex;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #F5F5F5;
+    justify-content: center;
 }
 
 html, body {
