--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h3{
     margin-top: 20px;
 }
 
-p{
+.registred{
     color: lightslategray;
     font-size: small;
     margin: 0;
@@ -51,4 +51,13 @@ p{
 
 .error-messange{
     color: red;
+}
+
+.row{
+    margin-top: 25px;
+}
+
+img{
+    height: 100px;
+    width: auto;
 }
